--- a/About page/About.css
+++ b/About page/About.css
@@ -117,7 +117,7 @@ font-family:'albert sans';
     flex-direction: column;
     justify-content: space-between;
     width:fixed;
-    background-color: #ff5851;
+    background-color: #000000;
   padding: 10px;
   border: 5px solid #564b4b;
   height:600px;
@@ -150,24 +150,16 @@ font-family:'albert sans';
     font-family: 'Albert Sans';
     font-weight: 700;
     border:none;
-    color: white;
-    background-color:#ff5851;
+    color: rgb(255, 0, 0);
+    background-color:#000000;
     transition: 0.4s;
     text-decoration:none;
 }
 .men>a:hover
 {
-color: #000000;
+color: #ffffff;
 }
-.men>a:visited
-{
-  width:fit-content;
-    font-family: 'Albert Sans';
-    font-weight: 700;
-    border:none;
-    color: white;
-    background-color:#ff5851;
-}
+
 
 
 .text
@@ -194,8 +186,8 @@ p{
 .men>.Desc{
   font-family: 'albert sans';
   font-weight: 200;
-  background-color: #ff5851;
-  color: black;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
   text-align: justify;
   padding-left: 5px;
   padding-right: 5px;
