--- a/About page/About.css
+++ b/About page/About.css
@@ -14,8 +14,8 @@ body{
     background-color: white;
     color: black;
 }
-/* Topbar begins */
-#topbar { 
+/* Topbar CSS starts */
+#topbar {
   position: fixed;
   top: 0;
   width: 100%;
@@ -25,7 +25,7 @@ body{
   align-items: center;
   justify-content: space-between;
   height: 80px;
-  color: rgb(255, 255, 255);
+  color: #000000;
   font-family: 'Share Tech Mono';
   font-size: 40px;
   letter-spacing: 2px;
@@ -36,30 +36,33 @@ body{
   align-items: center;
 }
 .topbar-a {
-  transition: 0.5s;
-  color: rgb(171, 171, 171); 
+  transition: 0.3s;
+  color: #c4c4c4;
   border: none;
   padding: 0 25px 0 8px;
   font-family: 'Roboto';
   font-size: 16px;
   cursor: pointer;
   text-decoration: none;
+  /* border-left: 2px solid white; */
 }
-.topbar-a-3 {
-  color: white;
-  cursor: default;
-}
+
 .topbar-btn > a:hover {
   color: #ffffff;
 }
 .logo {
   margin: 0;
+  cursor: pointer;
 }
-.logo > span {
+.logo > a {
+  text-decoration: none;
+  color: #ffffff;
+}
+.logo > a > span {
   color: #ff5851;
 }
+/* Topbar CSS ends */
 
-/* Topbar ends */
 #top-cont
 {
 margin-top: 80px;
@@ -94,7 +97,6 @@ font-family:'albert sans';
     grid-template-columns: repeat(4, 1fr); /* Four columns with equal width */
     gap: 10px;  
     background-color: rgb(0, 0, 0);
-    border: 1px solid #ff0f03;
 }
 .image-div            
 {
@@ -117,7 +119,7 @@ font-family:'albert sans';
   flex-direction: column;
   justify-content: space-between;
   width:fixed;
-  background-color: #000000;
+  background-color: #ed8383;
   padding: 10px;
   border: 5px solid #564b4b;
   height:500px;
@@ -128,8 +130,8 @@ font-family:'albert sans';
 #heading
 {
     margin-top:130px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 40px;
+    font-family: 'Share tech mono';
+    font-size: 60px;
     color: #ffffff;
     padding-top: 100px;
     text-align: center ;
@@ -168,11 +170,7 @@ color: #ffffff;
     margin-top:-130px;
     font-weight: 700;
 }
-#heading
-{
-    font-family: 'Aboreto';
-    font-size: 70px;
-}
+
 p{
     font-family: 'aboreto';
 
@@ -189,7 +187,19 @@ p{
   color: rgb(255, 255, 255);
   padding-left: 5px;
   padding-right: 5px;
+}
 
+@media only screen and (max-width: 1250px) {
+  #create {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1 1;
+  }
+}
+@media only screen and (max-width: 850px) {
+  #create {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1 1 1;
+  }
 }
 
 
